change: set max width content to the website to center the pages and prevent stretching fix: some pages presented overflowing elements

--- a/styles/aboutUs.scss
+++ b/styles/aboutUs.scss
@@ -4,7 +4,8 @@
   background: url("/assets/about_title_bg.png") no-repeat;
   background-size: 100%;
   width: 100%;
-  height: 340px;
+  // height: 340px;
+  height: 100%;
   z-index: 99;
   position: absolute;
 }
@@ -14,7 +15,7 @@
   justify-content: center;
   text-align: center;
   padding-top: 5%;
-  width: 20%;
+  flex-direction: column;
 }
 
 .about-title-text-container .about-title-text {
@@ -22,13 +23,14 @@
   font-weight: 500;
   letter-spacing: 2px;
 }
-.about-title-text-container .about-body-text {
-  width: 60%;
-}
+// .about-title-text-container .about-body-text {
+//   width: 60%;
+// }
 
 .about-body-container {
   padding: 20% 15rem 7rem 15rem;
-  text-align: justify;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .border-gradient {
@@ -76,31 +78,22 @@
   display: none;
 }
 
-@media screen and (min-width: 2200px) {
-  .about-title {
-    height: 450px;
-  }
-}
-
-@media screen and (min-width: 2700px) {
-  .about-title {
-    height: 520px;
-  }
-  .about-title-text-container {
-    padding-top: 150px;
-  }
-}
-
 @media screen and (min-width: 2900px) {
   .about-title {
-    background: url("/assets/about_big_title_bg.png") no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 280px;
+    clip-path: inset(8% 0 0 0);
+    margin-top: -5%;
   }
   .about-title-text-container {
-    padding-top: 100px;
+    margin-top: 4%;
+  }
+  .about-body-container {
+    padding-top: 15%;
+  }
+}
+
+@media screen and (min-width: 4000px) {
+  .about-title-text-container {
+    margin-top: 5%;
   }
 }
 
@@ -109,20 +102,20 @@
   //   // height: 570px;
   //   padding: 100px 10rem;
   // }
-  .about-title {
-    height: 450px;
-  }
-  .about-body-container {
-    padding: 20% 15rem 7rem 15rem;
-  }
+  // .about-title {
+  //   height: 450px;
+  // }
+  // .about-body-container {
+  //   padding: 20% 15rem 7rem 15rem;
+  // }
   .border-gradient.vertical {
     height: 32rem;
   }
 }
 @media screen and (max-width: 1300px) {
-  .about-body-container {
-    padding: 20% 8rem 7rem 8rem;
-  }
+  // .about-body-container {
+  //   padding: 20% 8rem 7rem 8rem;
+  // }
   .border-gradient.vertical {
     height: 34rem;
   }
@@ -140,9 +133,9 @@
     text-align: justify !important;
   }
 
-  .about-body-container {
-    padding: 20% 8rem 7rem 8rem;
-  }
+  // .about-body-container {
+  //   padding: 20% 8rem 7rem 8rem;
+  // }
 
   .about-title-text-container .about-body-text {
     display: none;
@@ -182,9 +175,9 @@
     font-size: 2.5rem;
   }
 
-  .about-body-container {
-    padding: 20% 5rem 7rem 5rem;
-  }
+  // .about-body-container {
+  //   padding: 20% 5rem 7rem 5rem;
+  // }
 
   .about-title-text-container {
     padding-top: 3%;
